# bytebufferc

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: bytebuffer.c  bytebuffer.h  main.c
